refactor: aplicar ISP